--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "hbs": "^4.2.0",
     "mysql2": "^3.9.4"
   },
   "devDependencies": {
