--- a/node1/.env
+++ b/node1/.env
@@ -1,6 +1,6 @@
 NODE_ID=1
 PORT=3000
-DB_HOST_NODE1=ccscloud.dlsu.edu.ph
+DB_HOST_NODE1=127.0.0.1
 DB_PORT_NODE1=60715
 DB_NAME_NODE1=mydb_node1
 DB_USER_NODE1=stadvdb
