--- a/node1/.env
+++ b/node1/.env
@@ -1,7 +1,7 @@
 NODE_ID=1
 PORT=3001
-DB_HOST_NODE1=ccscloud.dlsu.edu.ph
-DB_PORT_NODE1=60715
+DB_HOST_NODE1="10.2.14.15"
+DB_PORT_NODE1=3306
 DB_NAME_NODE1=mydb_node1
 DB_USER_NODE1=stadvdb
 DB_PASS_NODE1=123456789
