--- a/node1/package.json
+++ b/node1/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "cypress": "^15.7.0",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "hbs": "^4.2.0",
