feat: added auto replication

--- a/node1/.env
+++ b/node1/.env
@@ -5,3 +5,6 @@ DB_PORT_NODE1=3306
 DB_NAME_NODE1=mydb_node1
 DB_USER_NODE1=stadvdb
 DB_PASS_NODE1=123456789
+AUTO_REPLICATION_ENABLED=true
+AUTO_REPLICATION_INTERVAL_MS=1000
+AUTO_REPLICATION_LIMIT=100
