--- a/node2/.env
+++ b/node2/.env
@@ -5,3 +5,6 @@ DB_PORT_NODE2=3306
 DB_NAME_NODE2=mydb_node2
 DB_USER_NODE2=stadvdb
 DB_PASS_NODE2=123456789
+AUTO_REPLICATION_ENABLED=true
+AUTO_REPLICATION_INTERVAL_MS=1000
+AUTO_REPLICATION_LIMIT=100
