--- a/node3/.env
+++ b/node3/.env
@@ -5,3 +5,6 @@ DB_PORT_NODE3=3306
 DB_NAME_NODE3=mydb_node3
 DB_USER_NODE3=stadvdb
 DB_PASS_NODE3=123456789
+AUTO_REPLICATION_ENABLED=true
+AUTO_REPLICATION_INTERVAL_MS=1000
+AUTO_REPLICATION_LIMIT=100
