--- a/node2/.env
+++ b/node2/.env
@@ -1,10 +1,20 @@
 NODE_ID=2
 PORT=3002
+DB_HOST_NODE1="10.2.14.15"
+DB_PORT_NODE1=3306
+DB_NAME_NODE1=mydb_node1
+DB_USER_NODE1=stadvdb
+DB_PASS_NODE1=123456789
 DB_HOST_NODE2="10.2.14.16"
 DB_PORT_NODE2=3306
 DB_NAME_NODE2=mydb_node2
 DB_USER_NODE2=stadvdb
 DB_PASS_NODE2=123456789
+DB_HOST_NODE3="10.2.14.17"
+DB_PORT_NODE3=3306
+DB_NAME_NODE3=mydb_node3
+DB_USER_NODE3=stadvdb
+DB_PASS_NODE3=123456789
 AUTO_REPLICATION_ENABLED=true
 AUTO_REPLICATION_INTERVAL_MS=1000
 AUTO_REPLICATION_LIMIT=100
